syntax = "proto3";
package transactions;
option java_multiple_files = true;
option java_package = "org.example.proto";
option java_outer_classname = "TransactionsProto";

message TransactionFilter {
  int64  accountId = 1;
  string fromDate  = 2;  // yyyy-MM-dd
  string toDate    = 3;  // yyyy-MM-dd
  double minAmount = 4;
}

message Transaction {
  string id        = 1;
  int64  accountId = 2;
  string timestamp = 3;  // 2025-01-01T09:00:10Z
  double amount    = 4;
  string currency  = 5;
  string label     = 6;
}

service TransactionService {
  rpc StreamTransactions(TransactionFilter) returns (stream Transaction);
}